// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IntroSlider: Match snapshots 1 1`] = `
<AppIntroSlider
  activeDotStyle={
    Object {
      "backgroundColor": "rgba(255, 255, 255, .9)",
    }
  }
  buttonStyle={null}
  buttonTextStyle={null}
  doneLabel="Done"
  dotStyle={
    Object {
      "backgroundColor": "rgba(0, 0, 0, .2)",
    }
  }
  nextLabel="Next"
  onDone={[Function]}
  onSkip={[Function]}
  paginationStyle={null}
  prevLabel="Back"
  renderItem={[Function]}
  showDoneButton={true}
  showNextButton={true}
  showSkipButton={true}
  skipLabel="Skip"
  slides={
    Array [
      Object {
        "color": "#06C49C",
        "image": 1,
        "key": "encoding",
        "text": "Hide your data within images.",
        "title": "Hide data. ",
      },
      Object {
        "color": "#129FDD",
        "image": 1,
        "key": "share",
        "text": "Then share the encoded images with your friends.",
        "title": "Share your images",
      },
      Object {
        "color": "#643FEA",
        "image": 1,
        "key": "decoding",
        "text": "Finally use this app to retrieve your hidden data from the image.",
        "title": "Retrieve hidden data",
      },
    ]
  }
/>
`;

exports[`IntroSlider: Match snapshots 2 1`] = `
<AppIntroSlider
  activeDotStyle={
    Object {
      "backgroundColor": "rgba(255, 255, 255, .9)",
    }
  }
  buttonStyle={null}
  buttonTextStyle={null}
  doneLabel="Done"
  dotStyle={
    Object {
      "backgroundColor": "rgba(0, 0, 0, .2)",
    }
  }
  nextLabel="Next"
  onDone={[Function]}
  onSkip={[Function]}
  paginationStyle={null}
  prevLabel="Back"
  renderItem={[Function]}
  showDoneButton={true}
  showNextButton={true}
  showSkipButton={true}
  skipLabel="Skip"
  slides={Array []}
/>
`;

exports[`IntroSlider: Match snapshots 3 1`] = `
<AppIntroSlider
  activeDotStyle={
    Object {
      "backgroundColor": "rgba(255, 255, 255, .9)",
    }
  }
  buttonStyle={null}
  buttonTextStyle={null}
  doneLabel="Done"
  dotStyle={
    Object {
      "backgroundColor": "rgba(0, 0, 0, .2)",
    }
  }
  nextLabel="Next"
  onDone={[Function]}
  onSkip={[Function]}
  paginationStyle={null}
  prevLabel="Back"
  renderItem={[Function]}
  showDoneButton={true}
  showNextButton={true}
  showSkipButton={true}
  skipLabel="Skip"
  slides={Array []}
/>
`;
